[gd_scene load_steps=8 format=3 uid="uid://dtwuefjxhddi2"]

[ext_resource type="Script" path="res://systems/game3/game3.gd" id="1_i7y8d"]
[ext_resource type="Script" path="res://systems/game3/Game.gd" id="1_j4hsh"]
[ext_resource type="PackedScene" uid="uid://dq5jw5oofwekp" path="res://systems/misc/clickable/clickable_change_scene.tscn" id="3_hlgud"]
[ext_resource type="Script" path="res://systems/game3/Game_Intro.gd" id="3_xlt2l"]
[ext_resource type="PackedScene" uid="uid://ka6f2ksq5rlp" path="res://systems/misc/display_money/money.tscn" id="4_gf8nj"]
[ext_resource type="PackedScene" uid="uid://dppjchrp5io0f" path="res://systems/pet/pet.tscn" id="6_3po1a"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ekadj"]
size = Vector2(541, 20)

[node name="Game3" type="Node2D"]
script = ExtResource("1_i7y8d")

[node name="Game" type="Node2D" parent="."]
script = ExtResource("1_j4hsh")

[node name="Spawner1" type="Marker2D" parent="Game"]
position = Vector2(90, 0)

[node name="Spawner2" type="Marker2D" parent="Game"]
position = Vector2(270, 0)

[node name="Spawner3" type="Marker2D" parent="Game"]
position = Vector2(450, 0)

[node name="Spawn_Timer" type="Timer" parent="Game"]
one_shot = true

[node name="Timer" type="Timer" parent="Game"]
one_shot = true

[node name="Area2D" type="Area2D" parent="Game"]
position = Vector2(273, 1171)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Game/Area2D"]
position = Vector2(-2.5, 0)
shape = SubResource("RectangleShape2D_ekadj")

[node name="Debuger" type="VBoxContainer" parent="Game"]
offset_left = 7.0
offset_top = 140.0
offset_right = 202.0
offset_bottom = 294.0

[node name="Label1" type="Label" parent="Game/Debuger"]
layout_mode = 2

[node name="Label2" type="Label" parent="Game/Debuger"]
layout_mode = 2

[node name="Label3" type="Label" parent="Game/Debuger"]
layout_mode = 2

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 540.0
offset_bottom = 960.0
mouse_filter = 2

[node name="Game_Intro" type="ColorRect" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.128025, 0.401517, 0.905758, 1)
script = ExtResource("3_xlt2l")

[node name="Label" type="Label" parent="Control/Game_Intro"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -43.5
offset_top = 300.0
offset_right = 43.5
offset_bottom = 323.0
grow_horizontal = 2

[node name="Play" type="Button" parent="Control/Game_Intro"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 25.0
offset_top = -23.5
offset_right = 144.0
offset_bottom = 18.5
grow_horizontal = 2
grow_vertical = 2
text = "
"

[node name="Main_Hub_Button" parent="Control/Game_Intro" instance=ExtResource("3_hlgud")]
layout_mode = 0
offset_left = 138.0
offset_top = 457.0
offset_right = 257.0
offset_bottom = 499.0

[node name="Hunger_Bar" type="ProgressBar" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.153
anchor_top = 0.026
anchor_right = 0.847
anchor_bottom = 0.053
offset_left = -0.128006
offset_top = 0.401999
offset_right = 0.12796
offset_bottom = -0.219002
grow_horizontal = 2
size_flags_horizontal = 4

[node name="Money" parent="Control" instance=ExtResource("4_gf8nj")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.163
anchor_top = 0.068
anchor_right = 0.306
anchor_bottom = 0.091
offset_left = 0.112
offset_top = 0.435997
offset_right = -0.256012
offset_bottom = -0.0930023
text = "00000"

[node name="Pet" parent="." instance=ExtResource("6_3po1a")]
visible = false

[connection signal="area_shape_entered" from="Game/Area2D" to="Game" method="_on_area_2d_area_shape_entered"]
[connection signal="button_up" from="Control/Game_Intro/Play" to="Control/Game_Intro" method="_on_play_button_up"]
